Add some functionality
Almost all of the protocol (excluding RSA operations).,

--- a/node/package.json
+++ b/node/package.json
@@ -6,7 +6,9 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "js-sha512": "^0.8.0",
+    "node-rsa": "^1.0.8",
     "v-img": "^0.2.0",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
