--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.1"
 services:
+  application-flask:
+    build: Server
+    ports:
+      - 5000:5000
   application-mongodb:
     build: Data
     ports:
