--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,17 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "base64-img": "^1.0.4",
     "crypto-js": "^4.0.0",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "js-sha512": "^0.8.0",
     "node-rsa": "^1.0.8",
     "v-img": "^0.2.0",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.7.0",
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.9",
